--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -357,10 +357,12 @@
 .courseTeacher-container .class
     background-color: #e74c3c
 .ClassTeacher-main
-    height: 55rem
+    min-height: 96vh;
+    height: 100%
     background-color: #e74c3c
 .CourseTeacher-main
-    height: 55rem
+    min-height: 96vh;
+    height: 100%
     background-color: #51bd7e
 
 
