--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -117,11 +117,8 @@ iframe
     color: #000
     background-color: rgb(104, 104, 104)
     border-radius: 5px
-
-.modal-content
-    min-height:100% !important
-.modal-body
-    text-align: center
+#urlid
+    margin-bottom: 15px
 @media (min-width: 320px) and (max-width: 680px) 
     .footer-distributed 
         span
