--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -7,7 +7,7 @@
     cursor: pointer
     background-color: Transparent
     border: none
-    margin: 0px 20px 55px 20px
+    margin: 0px 10px 55px
 
 .modal 
     position: fixed
@@ -66,33 +66,15 @@
     transform: translate(0, 0)
 
 .modal .modal-dialog 
-    margin-top: 20% !important
+    margin-top: 100px !important
 
-.modal.fade .modal-dialog 
-    transition: transform 0.3s ease-out
-    transform: translate(0, -25%)
 
 .modal-dialog 
     // max-width: 500px
     margin: 1.75rem auto
     position: relative
     width: auto
-    pointer-events: none
 
-.modal-content 
-    position: relative
-    display: flex
-    flex-direction: column
-    width: 100%
-    // width: 500px
-    min-height: 400px
-    pointer-events: auto
-    background-color: #ffffff
-    background-clip: padding-box
-    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5)
-    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25)
-    outline: 0
-    border-radius: 20px
 
 .modal-header 
     -ms-flex-align: center
@@ -102,19 +84,6 @@
     display: flex
     justify-content: space-between
     padding: 1.25rem 1.5rem
-
-.modal-title 
-    font-size: 1.25rem
-    font-weight: 500
-    letter-spacing: .02em
-    line-height: 1.4
-    margin: 0
-
-.modal-body 
-    -ms-flex: 1 1 auto
-    flex: 1 1 auto
-    padding: 1.25rem 1.5rem
-    position: relative
 
 .card 
     /* Agregar sombras para crear el efecto */
@@ -196,12 +165,6 @@
 
 .punto-posi 
     width: 100%
-    height: 40px
-    align-content: center
-    text-align: center
-    color: #fff
-    background: #1D8DF4
-    border-radius: 15px
 
 .punto-text 
     font-style: normal
