cambios del master

--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -32,7 +32,7 @@
 
 .enter-code__academy
     float: left
-    padding: 3px;
+    padding: 3px
     background-color: transparent
 
 .enter-code__changeStudent
@@ -54,24 +54,24 @@
     .enter-code__changeStudent &
         // color: #2B4F95
         color: #ffffff
-        width: 198px;
-        float: right;
+        width: 198px
+        float: right
 
 .enter-code__body
-    width: 100%;
-    height: 78%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+    width: 100%
+    height: 78%
+    justify-content: center
+    align-items: center
+    display: flex
 
 .enter-code__formulario
     text-align: center
     font-family: Opal
     padding: 15px
-    display: flex;
-    flex-wrap: wrap;
+    display: flex
+    flex-wrap: wrap
     justify-content: center
-    width: 405px;
+    width: 405px
 
 .enter-code__tittle-body
     color: #ffffff
@@ -96,8 +96,8 @@
     padding: 5px
     color: white
     border-radius: 5px
-    font-family: Opal;
-    font-size: 1.5em;
+    font-family: Opal
+    font-size: 1.5em
     &:hover
         background: #202020
         cursor: pointer
@@ -234,12 +234,12 @@
 
 @media screen and (max-width: 700px)
     .enter-code__header
-        list-style-type: none;
-        margin: 0;
-        padding: 5px 10px;
-        overflow: hidden;
-        display: grid;
-        grid-template-columns: 1fr 0fr 1fr;
+        list-style-type: none
+        margin: 0
+        padding: 5px 10px
+        overflow: hidden
+        display: grid
+        grid-template-columns: 1fr 0fr 1fr
 
     .enter-code__academy-a
         padding: 15px 0 0 0
@@ -247,9 +247,9 @@
         .enter-code__changeStudent &:hover
             background-color: #303035
             border-radius: 5px
-            padding: 3px;
-            margin: 0;
-            width: fit-content;
+            padding: 3px
+            margin: 0
+            width: fit-content
     .enter-code__body
         height: 80%
 
@@ -270,4 +270,4 @@
     .enter-code__academy-a
         // padding: 15px 3px
         margin: 0
-        padding: 3px;
+        padding: 3px
