--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -2,6 +2,8 @@
     height: 100vh
     display: grid
     grid-template-rows: 55px 45px auto 40px
+.Toastify
+    position: fixed
 .Header-code__header
     background: #ffffff
     display: flex
