--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -119,6 +119,9 @@ iframe
     border-radius: 5px
 #urlid
     margin-bottom: 15px
+.fc-formulario
+    width: 100% !important
+    height: 335px
 @media (min-width: 320px) and (max-width: 680px) 
     .footer-distributed 
         span
@@ -144,4 +147,6 @@ iframe
         background: #F8F8F8
         padding: 10px
         width: 70%
-        min-height: 85%    
+        min-height: 85%
+    .fc-formulario
+        height: 500px 
