--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -187,6 +187,7 @@
         align-items: center
         color: black
         & .courseTeacher-card-intro
+            width: 100%
             font-size: 13px
             height: 30%
 
