--- a/src/components/student/Header/HeaderContainer.css
+++ b/src/components/student/Header/HeaderContainer.css
@@ -1,6 +1,10 @@
 .alumnoH-header{
-    /* position: fixed; */
+    position: fixed;
     background: -webkit-linear-gradient(left,#5D00FF, #007bff);
+    height: 66px;
+    width: 100%;
+}
+.alumnoH-header-base{
     height: 66px;
     width: 100%;
 }
@@ -58,6 +62,7 @@
     width: 100%;
     display: none;
     background: rgb(216, 216, 216);
+    z-index: 3000;
 }
 .alumnoH-header .alumnoHeader-nav .alumnoHeader-li .alumnoHeader-nav .alumnoHeader-li{
     width: 100%;
