--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -20,7 +20,7 @@
     justify-content: center 
     align-items: center
     background: #fff
-    height: 15px
+    height: 65px
     padding: 15px
     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
 
@@ -30,17 +30,20 @@
 
 .left
     color: #fff
-    font-size: 3.5em
     font-weight: bold
+    font-size: 1.7em
     padding: 10px
     display: inline-flex
-    nav
+    .contador
         background: #A647FA
         padding: 30px
         -moz-border-radius: 50%
         -webkit-border-radius: 50%
         border-radius: 50%
         height: 120px
+        h1
+            margin-block-start: 0.15em
+            margin-block-end: 0em
 
 .right
     display: inline-block
