--- a/src/components/student/footer/footerStyles.sass
+++ b/src/components/student/footer/footerStyles.sass
@@ -5,15 +5,13 @@ footer.page-footer
     bottom: 0
     color: #fff
 
-.hg-150
-    height: 155px!important
-
 .teal
     background: -webkit-linear-gradient(left, #007bff, #5D00FF)!important
 
 .fixed-footer
     position: fixed
     bottom: 0
+    height: 150px
 .slide-container
     width: 200px
     height: 30px
