--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -21,15 +21,16 @@
     .class-name
         color: #2B4F95
         flex-grow: 2
-        margin: auto
+        margin: auto 15px auto auto
         font-size: 20px
         text-align: right
     .options
         flex-grow: 0    
         margin: 10px 18px
         text-align: right
-        .btn-setting
-            cursor: pointer
+    .btn-setting
+        cursor: pointer
+        margin: 10px 10px auto auto
     .code-detail
         width: 150px
         height: 45px
