--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -4,7 +4,9 @@
 
 .Actions
     position: relative
-    top: 10px
+    top: 15px
+    button
+        cursor: pointer
 
 
 button, [type="button"], [type="reset"], [type="submit"] 
