--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -24,6 +24,8 @@
 .grupos-cards__item
     display: flex
     padding: 1rem
+    width: 33.33%
+
 .grupos-card
     background-color: white
     border-radius: 0.25rem
@@ -55,13 +57,13 @@
     line-height: 1.5
     margin-bottom: 1.25rem
 
-@media (min-width: 40rem)
+@media (max-width: 56rem)
     .grupos-cards__item
-        width: 30%
+        width: 50%
 
-@media (min-width: 56rem)
+@media (max-width: 36rem)
     .grupos-cards__item
-        width: 30%
+        width: 100%
 
 .contenedor-grupos
     color: #999999
