edit sass grupos

--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -2,6 +2,8 @@
 .cuerpo-grupos
     text-align: center
     margin-top: 25px
+    .button
+        margin-top: 10px
 
 .input-text
     border: 2px solid rgba(255,255,255,.5)
