gruos and video

--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -4,9 +4,12 @@
     margin-top: 25px
     .button
         margin-top: 10px
+    .input-text
+        text-align: center
+
 
 .input-text
-    border: 2px solid rgba(255,255,255,.5)
+    border: 2px solid rgb(0, 140, 186)
     font-size: 1.75em
     padding: .25em .5em .3125em
     color: rgba(2, 2, 2, 0.5)
@@ -37,7 +40,7 @@
     flex-direction: column
     overflow: hidden
     text-align: center
-    border: solid #6EA3A8
+    border: solid #008cba
     &:hover .grupos-card__image
         -webkit-filter: contrast(100%)
         filter: contrast(100%)
