--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -118,7 +118,8 @@
     background-color: white
     color: black
     border: 2px solid #008CBA
-
+.Opal
+    font-family: Opal
 
 .btnMyM 
     background-color: #008CBA
