--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -13,9 +13,11 @@
             margin: auto 3px auto auto
         span 
             margin: auto auto auto 3px
+            
 iframe 
     width: -webkit-fill-available
     height: -webkit-fill-available
+    border-radius: 10px
 .footer-center 
     width: 45%
 #micro
@@ -37,7 +39,6 @@ iframe
     background: #F8F8F8
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
     border-radius: 10px
-    padding: 20px
     text-align: center
     width: 70%
     transition: .3s ease all
