--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -111,12 +111,12 @@ iframe
     top: 0
 .popup .btn-cerrar-popup .material-icons 
     color: #F8F8F8
-    background-color: #00a8ff
+    background:#FF0000
     border-radius: 5px   
 
 .popup .btn-cerrar-popup .material-icons:hover 
-    color: #000
-    background-color: rgb(104, 104, 104)
+    color: #ffffff
+    background-color: green 
     border-radius: 5px
 #urlid
     margin-bottom: 15px
