--- a/src/components/teacher/azar/Roulette.sass
+++ b/src/components/teacher/azar/Roulette.sass
@@ -12,3 +12,32 @@
 .roulette-canvas
   width: 500%
   height: 500%
+
+.tab-group 
+  list-style:none
+  padding: 0
+  margin: 0 0 40px 0
+  &:after 
+    content: ""
+    display: table
+    clear: both
+    li 
+      a 
+      display:block
+      text-decoration:none
+      padding: 15px
+      background:rgba(#a0b3b0,.25)
+      color:#a0b3b0
+      font-size: 20px
+      float:left
+      width: 50%
+      text-align:center
+      cursor:pointer
+      transition: .5s ease
+    &:hover 
+      background:darken($main,5%)
+      color:#fff
+    
+  .active a 
+    background:#1ab188
+    color:#fff
