mejoras en class

--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -1,6 +1,7 @@
 .Files
-    padding: 10px
-    margin: 25px
+    position: absolute
+    margin-top: 123px
+    max-width: 200px
 
 .Actions
     position: relative
