--- a/src/view/classAndCourse/upload/Dropzone.css
+++ b/src/view/classAndCourse/upload/Dropzone.css
@@ -9,7 +9,7 @@
   justify-content: center;
   flex-direction: column;
   font-size: 16px;
-  margin-left: 16%;
+  /* margin-left: 16%; */
 }
 
 .Highlight {
