--- a/src/index.css
+++ b/src/index.css
@@ -215,7 +215,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;z
+  -webkit-appearance: button;
 }
 
 /**
