--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -1,7 +1,8 @@
 .Files
     position: absolute
-    margin-top: 123px
+    margin-top: 130px
     max-width: 200px
+    width: 200px
 
 .Actions
     position: relative
