--- a/src/index.css
+++ b/src/index.css
@@ -398,7 +398,6 @@ template {
     position: relative;
     top: 17px;
     padding: 1.25rem 1.5rem;
-
   }
 
 .modal-content {
@@ -416,19 +415,35 @@ template {
 .modal-title{
     letter-spacing: .01em}
 
-.modal-teacher__general .close{
-    position: absolute;
-    width: 42px;
-    height: 35px;
-    top: 0;
-    right: 15px;
-    cursor: pointer;
-    background: #E91E63;
-    color: #fff;
-    border-radius: 9px;
-    font-weight:bold}
-.modal-teacher__general .close:hover{
-  color: #eee
+.modal-teacher__general-close{
+  float: right;
+  background-color: #E91E63;
+  min-width: 30px;
+  max-width: 40px;
+  border: 0;
+  height: 30px;
+  display: block;
+  margin: .7em;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  cursor: pointer;
+}
+.modal-teacher__general-close .modal-teacher__general-cross{
+  transition: transform 0.3s ease-in-out;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  width: 12px
+}
+.modal-teacher__general-close:hover .modal-teacher__general-cross{
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  -o-transform: scale(1.25);
+  transform: scale(1.3)
 }
 
 .modal-teacher__general-controlname{
@@ -477,9 +492,17 @@ template {
 
 
 #modal-body__button-yes{
-    background: #52BE7F}
+    background: #52BE7F;
+    transition: transform 0.3s ease-in-out;
+    -webkit-transition: all .4s ease;
+    -moz-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    -ms-transition: all .4s ease;
+    cursor: pointer
+  }
    #modal-body__button-yes:hover{
-      background: #52BE7F88}
+    padding: 5px 10px;
+    font-size: 22px}
 
 #modal-body__button-no{
     background: #E91E63}
@@ -500,9 +523,10 @@ template {
 .modal-body .btn{
   padding: 5px 10px;
   text-decoration: none;
-  border-radius: 10px;
+  border-radius: 5px;
+  border: 0;
   color:#fff;
-  font-size:18px;
+  font-size:20px;
   background: #00aae3;
   cursor: pointer
 }
