--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -92,34 +92,44 @@ iframe
     line-height: 120px
     margin: 0%
     transform: translateY(-50%)
-    width: 90px
-    height: 90px
+    width: 77px
+    height: 78px
     top: 49%
 .btn-back i,
 .btn-next i 
-    font-size: 100px
+    font-size: 80px
+
 .btn-back 
-    left: -50px
+    left: -27px
+
+.btn-next
+    right: -37px
+
 .popup .btn-cerrar-popup 
-    line-height: 16px
-    text-align: right
+    line-height: 10px
+    text-align: center
     transition: .3s ease all
     color: rgb(56, 56, 56)
     font-size: 25px
     position: absolute
     right: 0
     top: 0
+
 .popup .btn-cerrar-popup .material-icons 
     color: #F8F8F8
-    background:#FF0000
+    background: #E91E63
+    width: 42px
+    height: 35px
+    margin-top: 0px
     border-radius: 5px   
+    padding: 5px
 
 .popup .btn-cerrar-popup .material-icons:hover 
     color: #ffffff
-    background-color: green 
     border-radius: 5px
 #urlid
     margin-bottom: 15px
+
 .fc-formulario
     width: 100% !important
     height: 335px
