--- a/src/index.css
+++ b/src/index.css
@@ -505,7 +505,8 @@ template {
   color:#fff;
   font-size:18px;
   background: #00aae3;
-  cursor: pointer
+  cursor: pointer;
+  font-family: opal !important;
 }
 .modal-body .btn:hover{
   background: #00aae388;
