--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -20,9 +20,8 @@
             transform: scale(1.5)
 
     .input-text
-        text-align: center
-        // width: 80px
-        // color: #000000
+        width: 80px
+        color: #000000
 
 
 .input-text
