modals en cambios 2.0

--- a/src/index.css
+++ b/src/index.css
@@ -430,6 +430,7 @@ template {
   width: 100%;
   cursor: pointer;
 }
+
 .modal-teacher__general-close .modal-teacher__general-cross{
   transition: transform 0.3s ease-in-out;
   -webkit-transition: all .4s ease;
@@ -540,7 +541,7 @@ template {
 }
 #modal-body__button-cursos:hover .button-cursos__text{
   -webkit-transform: scale(1.08);
-  transform: scale(1.08);
+  transform: scale(1.07);
 }  
 
 .modal-body{
@@ -558,7 +559,8 @@ template {
   font-size:20px;
   background: #00aae3;
   cursor: pointer;
-  margin: auto 10px
+  margin: auto 10px;
+  font-family: "Opal"
 }
 .modal-body .btn:hover{
   background: #00aae388;
