--- a/src/index.css
+++ b/src/index.css
@@ -541,7 +541,7 @@ template {
 }
 @media screen and (max-height:630px){
   .modal-body{
-    height: 450px;
+    /*height: 450px;*/
     overflow: auto;
   }
 }
