--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -1,8 +1,9 @@
 .Files
     position: absolute
-    margin-top: 130px
+    margin-top: 100px
     max-width: 200px
     width: 200px
+
 
 .Actions
     position: relative
@@ -10,3 +11,7 @@
     button
         cursor: pointer
 
+.rellena 
+    color: #CC0000
+    font-family: "Opal"
+    font-size: 15px
