--- a/src/index.css
+++ b/src/index.css
@@ -432,22 +432,6 @@ template {
   cursor: pointer;
 }
 
-.modal-teacher__general-close .modal-teacher__general-cross{
-  transition: transform 0.3s ease-in-out;
-  -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  -ms-transition: all .4s ease;
-  width: 12px
-}
-.modal-teacher__general-close:hover .modal-teacher__general-cross{
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -ms-transform: scale(1.25);
-  -o-transform: scale(1.25);
-  transform: scale(1.3)
-}
-
 .modal-teacher__general-controlname{
     height: 48px;
     width: 100%;
@@ -492,17 +476,23 @@ template {
     margin-block-start: 0;
     margin-block-end: 0}
 
+.modal-body__button.no{
+  background: #E91E63;
+  cursor: pointer}
 
-#modal-body__button-yes{
-    background: #52BE7F;
-    transition: transform 0.3s ease-in-out;
-    -webkit-transition: all .4s ease;
-    -moz-transition: all .4s ease;
-    -o-transition: all .4s ease;
-    -ms-transition: all .4s ease;
-    cursor: pointer
-  }
-#modal-body__button-yes .button-yes__text{
+.modal-body__button.backCursos{
+  background: #FB9600;
+  cursor: pointer}
+
+.modal-body__button.cursos,
+.modal-body__button.yes {
+  background: #52BE7F;
+  cursor: pointer}
+
+.modal-body__button.yes .button-zoom,
+.modal-body__button.no .button-zoom,
+.modal-body__button.cursos .button-zoom,
+.modal-body__button.backCursos .button-zoom{
   transition: transform 0.3s ease-in-out;
   -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
@@ -510,68 +500,33 @@ template {
   -ms-transition: all .4s ease;
   color: #fff
 }
-#modal-body__button-yes:hover .button-yes__text{
-  -webkit-transform: scale(1.25);
-  transform: scale(1.25);
-}  
+.modal-body__button.yes:hover .button-zoom,
+.modal-body__button.no:hover .button-zoom,
+.modal-body__button.cursos:hover .button-zoom,
+.modal-teacher__general-close:hover .button-zoom{
+  -webkit-transform: scale(1.20);
+  transform: scale(1.20)} 
 
-#modal-body__button-no{
-    background: #E91E63
-  }
-
-#modal-body__button-no .button-no__text{
-  transition: transform 0.3s ease-in-out;
-  -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  -ms-transition: all .4s ease
-}
-#modal-body__button-no:hover .button-no__text{
-  -webkit-transform: scale(1.25);
-  transform: scale(1.25);
-}  
-.modal-body__button-backCursos {
-    background: #FB9600}
-
-.modal-body__button-cursos {
-    background: #52BE7F}
-
-#modal-body__button-no:hover .button-cursos__text{
-  -webkit-transform: scale(1.25);
-  transform: scale(1.25);
-}  
-
-.modal-body__button-cursos .button-cursos__text,
-.modal-body__button-backCursos .button-cursos__text{
-  transition: transform 0.3s ease-in-out;
-  -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  -ms-transition: all .4s ease
-}
-.modal-body__button-backCursos:hover .button-cursos__text,
-.modal-body__button-cursos:hover .button-cursos__text{
+.modal-body__button.backCursos:hover .button-zoom{
   -webkit-transform: scale(1.08);
-  transform: scale(1.07);
-}  
+  transform: scale(1.08)} 
+
+.modal-body__button{
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    color:#fff;
+    font-size:20px;
+    cursor: pointer;
+    margin: auto 10px;
+    font-family: "Opal"}
 
 .modal-body{
     padding: 2.25rem 1.5rem;
     text-align: center;
     position: relative;
     padding-top: 12px}
-
-.modal-body .btn{
-  padding: 5px 10px;
-  text-decoration: none;
-  border-radius: 5px;
-  border: 0;
-  color:#fff;
-  font-size:20px;
-  cursor: pointer;
-  margin: auto 10px;
-  font-family: "Opal"
-}
 
 .modal-body .punto-marco{
   margin: 0 10px 25px;
