--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -14,15 +14,24 @@
         span 
             margin: auto auto auto 3px
 
-.button-zoom
-    transition: transform 0.3s ease-in-out
-    -webkit-transition: all .4s ease
-    -moz-transition: all .4s ease
-    -o-transition: all .4s ease
-    -ms-transition: all .4s ease
-    &:hover
-        -webkit-transform: scale(1.20)
-        transform: scale(1.20)
+.btnenviarvideo 
+    background-color: #008CBA
+    color: white
+    padding: 2px 10px
+    cursor: pointer
+    font-size: 20px
+    border-radius: 5px
+    margin: -2px 8px
+    .button-zoom
+        transition: transform 0.3s ease-in-out
+        -webkit-transition: all .4s ease
+        -moz-transition: all .4s ease
+        -o-transition: all .4s ease
+        -ms-transition: all .4s ease
+        &:hover
+            -webkit-transform: scale(1.20)
+            transform: scale(1.20)
+
 
 iframe 
     width: -webkit-fill-available
