--- a/src/components/teacher/azar/Roulette.css
+++ b/src/components/teacher/azar/Roulette.css
@@ -9,6 +9,18 @@
   justify-content: center;
   padding: 10px;
 }
+.roulette-container-button{
+  padding: 5px 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  border: 0;
+  color:#fff;
+  font-size:20px;
+  cursor: pointer;
+  margin: auto 10px;
+  font-family: "Opal";
+  background-color: #FB9600
+}
 
 .roulette-container-button.button-zoom{
   transition: transform 0.3s ease-in-out;
@@ -19,8 +31,8 @@
   color: #fff
 }
 .roulette-container:hover .button-zoom{
-  -webkit-transform: scale(1.20);
-  transform: scale(1.20)} 
+  -webkit-transform: scale(1.18);
+  transform: scale(1.18)} 
 .azar-tab-group {
   list-style:none;
   padding:0;
