--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -115,6 +115,8 @@
     transition-duration: 0.4s
 
 .btnMyM:hover 
+    background-color: white
+    color: black
     border: 2px solid #008CBA
 .Opal
     font-family: Opal
@@ -164,7 +166,6 @@
 
 .punto-posi 
     width: 100%
-    margin: 20px  10px 0
 
 .punto-text 
     font-style: normal
@@ -949,4 +950,4 @@ table th[class*=col-]
     margin-top: 2rem
 
 .modal .modal-dialog 
-    margin-top: 75px !important
+    margin-top: 40px !important
