--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -147,7 +147,7 @@
     padding: 0 15px;
     width: 100%;
   }
-  /* .triviaT-imgSalida{display: none} */
+  .triviaT-imgSalida{display: none}
 
 @media only screen and (min-width: 700px) {
     /* For desktop: */
@@ -171,7 +171,6 @@
 
 .imagen {
     margin: auto;
-    width: 60%
 }
 
 .triviaT-input-pregunta {
