--- a/src/index.css
+++ b/src/index.css
@@ -404,7 +404,7 @@ template {
 .modal-content {
   position: relative;
   width: 500px;
-  margin: 35px auto;
+  margin: auto;
   background-color: #ffffff;
   background-clip: padding-box;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
@@ -431,6 +431,21 @@ template {
   width: 100%;
   cursor: pointer;
 }
+.modal-teacher__general-close .modal-teacher__general-cross{
+  transition: transform 0.3s ease-in-out;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  width: 12px
+}
+.modal-teacher__general-close:hover .modal-teacher__general-cross{
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  -o-transform: scale(1.25);
+  transform: scale(1.3)
+}
 
 .modal-teacher__general-controlname{
     height: 48px;
@@ -455,7 +470,7 @@ template {
     line-height: 1.4;
     letter-spacing: .02em;}
 .modal-teacher__general-controldescription{
-    height: 60px;
+    height: 120px;
     width: 100%;
     left: 80px;
     right: 364px;
@@ -478,23 +493,17 @@ template {
     margin-block-start: 0;
     margin-block-end: 0}
 
-.modal-body__button.no{
-  background: #E91E63;
-  cursor: pointer}
 
-.modal-body__button.backCursos{
-  background: #FB9600;
-  cursor: pointer}
-
-.modal-body__button.cursos,
-.modal-body__button.yes {
-  background: #52BE7F;
-  cursor: pointer}
-
-.modal-body__button.yes .button-zoom,
-.modal-body__button.no .button-zoom,
-.modal-body__button.cursos .button-zoom,
-.modal-body__button.backCursos .button-zoom{
+#modal-body__button-yes{
+    background: #52BE7F;
+    transition: transform 0.3s ease-in-out;
+    -webkit-transition: all .4s ease;
+    -moz-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    -ms-transition: all .4s ease;
+    cursor: pointer
+  }
+#modal-body__button-yes .button-yes__text{
   transition: transform 0.3s ease-in-out;
   -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
@@ -502,66 +511,61 @@ template {
   -ms-transition: all .4s ease;
   color: #fff
 }
-.modal-body__button.yes:hover .button-zoom,
-.modal-body__button.no:hover .button-zoom,
-.modal-body__button.cursos:hover .button-zoom,
-.modal-teacher__general-close:hover .button-zoom{
-  -webkit-transform: scale(1.20);
-  transform: scale(1.20)} 
+#modal-body__button-yes:hover .button-yes__text{
+  -webkit-transform: scale(1.25);
+  transform: scale(1.25);
+}  
 
-.modal-body__button.backCursos:hover .button-zoom{
+#modal-body__button-no{
+    background: #E91E63
+  }
+
+#modal-body__button-no .button-no__text{
+  transition: transform 0.3s ease-in-out;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease
+}
+#modal-body__button-no:hover .button-no__text{
+  -webkit-transform: scale(1.25);
+  transform: scale(1.25);
+}  
+#modal-body__button-cursos {
+    background: #FB9600}
+
+#modal-body__button-cursos .button-cursos__text{
+  transition: transform 0.3s ease-in-out;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease
+}
+#modal-body__button-cursos:hover .button-cursos__text{
   -webkit-transform: scale(1.08);
-  transform: scale(1.08)} 
-
-.modal-body__button{
-    padding: 5px 10px;
-    text-decoration: none;
-    border-radius: 5px;
-    border: 0;
-    color:#fff;
-    font-size:20px;
-    cursor: pointer;
-    margin: auto 10px;
-    font-family: "Opal"}
+  transform: scale(1.08);
+}  
 
 .modal-body{
     padding: 2.25rem 1.5rem;
     text-align: center;
     position: relative;
-    padding-top: 12px}
+    padding-top:20px}
 
-.modal-body .punto-marco{
-  margin: 0 10px 25px;
-}
-
-.list-seccion, .list-grade{
-  background-color:#FF9191;
-  width: 25%;
-  padding: 2px;
-  text-align-last:center;
-}
-
-.list-course{
-  background-color: rgb(247, 166, 45);
-  width: 90%;
-  padding: 2px;
-  text-align-last:center;
-}
-
-.list-grade,.list-seccion,.list-course{
+.modal-body .btn{
+  padding: 5px 10px;
+  text-decoration: none;
+  border-radius: 5px;
   border: 0;
-  font-family: "Opal";
-  color: #fff;
+  color:#fff;
+  font-size:20px;
+  background: #00aae3;
+  cursor: pointer;
+  font-family: opal !important;
   margin: auto 10px
 }
-
-.listDetalleTitle{
-  font-family: "Opal";
-  font-size: 1rem;
-  margin: 0;
-  line-height: 1.4;
-  letter-spacing: .02em;
-  width: 25%
+.modal-body .btn:hover{
+  background: #00aae388;
 }
 
 @media screen and (max-width:800px){
