--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -3,7 +3,7 @@
     margin-top: 100px
     max-width: 200px
     width: 200px
-
+    height: 120px
 
 .Actions
     position: relative
@@ -15,3 +15,6 @@
     color: #CC0000
     font-family: "Opal"
     font-size: 15px 
+.ProgressWrapper
+    
+    
