--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -272,15 +272,16 @@
         -o-transform: scale(1.25)
         transform: scale(1.25)
 .courseTeacher__buttonEntry
-    width: 100%
+    width: 89%
     border: 0
-    height: 20%
     display: block
     margin: .2em
     border-radius: 5px
     vertical-align: middle
     text-align: center
-    position: relative
+    position: absolute
+    bottom: 10px
+    right: 11px
     cursor: pointer
     text-decoration: none
     padding: .5rem
@@ -292,8 +293,8 @@
         background-color: #52BE7F
         color: #ffffff
         padding: .5rem
-        -webkit-transform: scale(1.1)
-        transform: scale(1.1)
+        -webkit-transform: scale(1.05)
+        transform: scale(1.05)
     & .courseTeacher__buttonEntry-label 
         width: 150px
         cursor: pointer
