--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -147,6 +147,11 @@
             transform: none
             z-index: 2
             display: block
+
+.font
+    background: red
+    font-size: 45px0
+
 @media screen and (max-width: 680px)
     #menuToggle
         display: block !important        
