--- a/src/index.css
+++ b/src/index.css
@@ -420,11 +420,11 @@ template {
   float: right;
   background-color: #E91E63;
   min-width: 30px;
-  max-width: 40px;
+  max-width: 43px;
   border: 0;
   height: 30px;
   display: block;
-  margin: .7em;
+  margin: 0em;
   border-radius: 5px;
   position: relative;
   z-index: 1;
