añadido de estudiantes

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Opal !important;
+  font-family: Opal;
   src: url("./plugins/Opal.ttf") format("truetype");
 }
 
@@ -404,7 +404,7 @@ template {
 .modal-content {
   position: relative;
   width: 500px;
-  margin: 50px auto;
+  margin: auto;
   background-color: #ffffff;
   background-clip: padding-box;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
@@ -431,7 +431,6 @@ template {
   width: 100%;
   cursor: pointer;
 }
-
 .modal-teacher__general-close .modal-teacher__general-cross{
   transition: transform 0.3s ease-in-out;
   -webkit-transition: all .4s ease;
@@ -544,7 +543,7 @@ template {
 }
 #modal-body__button-cursos:hover .button-cursos__text{
   -webkit-transform: scale(1.08);
-  transform: scale(1.07);
+  transform: scale(1.08);
 }  
 
 .modal-body{
@@ -562,7 +561,7 @@ template {
   font-size:20px;
   background: #00aae3;
   cursor: pointer;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+  font-family: opal !important;
   margin: auto 10px
 }
 .modal-body .btn:hover{
