--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Opal !important;
+  font-family: Opal;
   src: url("./plugins/Opal.ttf") format("truetype");
 }
 
@@ -183,6 +183,7 @@ textarea {
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
+  font-family: opal;
 }
 
 /**
