--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -1,9 +1,10 @@
 .Files
-    position: absolute
-    margin-top: 100px
+    position: relative
+    margin-top: -100px
     max-width: 200px
     width: 200px
-    height: 120px
+    height: 100px
+    pointer-events: none
 
 .Actions
     position: relative
@@ -16,5 +17,7 @@
     font-family: "Opal"
     font-size: 15px 
 .ProgressWrapper
-    
+    bottom: 0
+    position: absolute
+    width: 100%
     
