--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -210,9 +210,9 @@ iframe
 
 .fc-formulario
     width: 100% !important
-    height: 335px
+    height: 80%
 
-@media (min-width: 320px) and (max-width: 680px) 
+@media (max-width: 680px) 
     .footer-distributed 
         span
             display: none
@@ -237,5 +237,3 @@ iframe
         background: #F8F8F8
         width: 70%
         min-height: 85%
-    .fc-formulario
-        height: 520px 
