--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -52,8 +52,6 @@
             -o-transform: scale(1.25)
             transform: scale(1.3)
 
-
-
 .Myni
     background-color: #3d8f2d
     color: white
@@ -74,11 +72,6 @@
             -ms-transform: scale(1.25)
             -o-transform: scale(1.25)
             transform: scale(1.3)
-
-
-
-
-
 
 iframe 
     width: -webkit-fill-available
@@ -102,9 +95,6 @@ iframe
 .overlay.active 
     visibility: visible
 
-
-
-
 .popup 
     background: #F8F8F8
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
@@ -115,6 +105,28 @@ iframe
     transform: scale(0.7)
     opacity: 0
     height: 70%
+    min-height: 85%
+    .btn-cerrar-popup 
+        line-height: 10px
+        text-align: center
+        transition: .3s ease all
+        color: rgb(56, 56, 56)
+        font-size: 25px
+        position: absolute
+        right: 0
+        top: 0
+        .material-icons 
+            color: #F8F8F8
+            background: #E91E63
+            width: 42px
+            height: 35px
+            margin-top: 0px
+            border-radius: 5px   
+            padding: 5px
+        .material-icons:hover 
+            color: #ffffff
+            border-radius: 5px
+
 .btn-abrir-popup 
     cursor: pointer
 .popup.active 
@@ -181,30 +193,6 @@ iframe
     font-size: 22px
     font-famili: "Opal"
 
-
-
-.popup .btn-cerrar-popup 
-    line-height: 10px
-    text-align: center
-    transition: .3s ease all
-    color: rgb(56, 56, 56)
-    font-size: 25px
-    position: absolute
-    right: 0
-    top: 0
-
-.popup .btn-cerrar-popup .material-icons 
-    color: #F8F8F8
-    background: #E91E63
-    width: 42px
-    height: 35px
-    margin-top: 0px
-    border-radius: 5px   
-    padding: 5px
-
-.popup .btn-cerrar-popup .material-icons:hover 
-    color: #ffffff
-    border-radius: 5px
 #urlid
     margin-bottom: 15px
 
