--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -62,7 +62,7 @@
     font-size: 20px
     border-radius: 5px
     margin: -2px 8px
-    margin-top: 1%
+    margin-top: 2%
     .button-zoom
         -webkit-transition: all .44s ease
         -moz-transition: all .4s ease
@@ -74,10 +74,6 @@
             -ms-transform: scale(1.25)
             -o-transform: scale(1.25)
             transform: scale(1.3)
-
-
-
-
 
 
 iframe 
@@ -161,15 +157,42 @@ iframe
     cursor: pointer
     line-height: 120px
     margin: 0%
-    transform: translateY(-50%)
+    //transform: translateY(-50%)
     width: 77px
     height: 78px
     top: 49%
-    display: none
+
+
 
 .btn-back i,
 .btn-next i 
-    font-size: 80px
+    font-size: 30px
+    cursor: pointer
+    display: inline-block
+    position: relative
+
+
+.btn-next i:after 
+  content: '»'
+  position: absolute
+  opacity: 0
+  top: 0
+  right: -20px
+  transition: 0.5s
+
+
+.btn-next:hover i 
+  padding-right: 25px
+
+
+.btn-next:hover i:after
+  opacity: 1
+  right: 0
+
+
+
+
+
 
 .btn-back 
     left: -27px
