--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -166,6 +166,10 @@
     width: 100%
     margin: 0  10px 0
 
+.punto-posif 
+    width: 100%
+    margin: 20px  10px 0
+
 .punto-text 
     font-style: normal
     font-weight: 50
