cambios de agregar

--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -159,6 +159,8 @@
       position: relative
       box-shadow: 0 0 10px 1px #ff73b3
       margin-top: 30px
+      font-family: Opal
+      font-size: 15px
   .loginTeacher-form-item
     position: absolute
     left: 0
@@ -315,3 +317,8 @@
       height: 420px
     &.log-in .loginTeacher-container-form
       left: 30px
+.loginTeacherHeader
+  height: 30px
+  .logoAcademy
+    height: 30px
+    background-image: url('../../')
