--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -22,10 +22,12 @@
     justify-content: center 
     align-items: center
     background: #fff
-    height: 65px
+    height: auto
     padding: 15px
     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
     text-align: center
+    .triviaStudent-title
+        margin: 0
 
 .footer
     width: 100%
