--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -319,9 +319,11 @@
       left: 30px
 .loginTeacherHeader
   height: 51px
-  max-width: 200px
+  padding: 13px 10px 0
+  max-width: 227px
   .logoAcademy
     height: 51px
+    margin: 5px
     background-image: url('../../img/Logo.svg') 
     background-repeat: no-repeat
     &:hover
